plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}


group = 'com.bangtalboys'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

bootJar {
    mainClass = 'org.springframework.boot.loader.JarLauncher' // Main-Class 설정
    manifest {
        attributes(
                'Start-Class': 'com.bangtalboys.BTS_Backend.BtsBackendApplication' // Start-Class 설정
        )
    }
    enabled = true
}

jar {
	enabled= false
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.1"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	compileOnly 'org.projectlombok:lombok'
	testImplementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//mysql 연동
	implementation 'mysql:mysql-connector-java:8.0.32'

	//thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	//swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
	implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
	implementation 'org.jboss.logging:jboss-logging:3.5.3.Final'

	// sql 쿼리 로그 라이브러리
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

	//QueryDsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"


}


//def querydslDir = "$buildDir/generated/querydsl" // 임시 디렉토리에 생성

sourceSets {
	main {
		java {
//			srcDir querydslDir
		}
	}
}

//tasks.withType(JavaCompile).configureEach {
//	options.compilerArgs += [
//			"-Aquerydsl.generatedSourcesDir=${querydslDir}"
//	]
//}


tasks.named('test') {
	useJUnitPlatform()
}